--- a/pages/tools/Homebrew.textile
+++ b/pages/tools/Homebrew.textile
@@ -2,7 +2,7 @@
 layout: page
 title: Homebrew
 description: OS X下最好的软件包管理器
-navigation: [1.安装, 2.配置, 3.完成, 4.Hello Maven, 更多...]
+navigation: [1.安装]
 ---
 
 <section>
