--- a/pages/tools/vim.textile
+++ b/pages/tools/vim.textile
@@ -2,7 +2,7 @@
 layout: page
 title: Vim
 description: 很强大的文本编辑器
-update: 2012-12-06
+update: 2013-03-25
 ---
 
 <section>
@@ -31,6 +31,7 @@ set nowrapscan              " 搜索到文件两端时不重新搜索
 "set list                   " 显示Tab符，使用一高亮竖线代替
 syntax enable               " 打开语法高亮
 syntax on                   " 开启文件类型侦测
+filetype on                 " 
 filetype indent on          " 针对不同的文件类型采用不同的缩进格式
 filetype plugin on          " 针对不同的文件类型加载对应的插件
 set nobackup                " 设置无备份文件
@@ -166,12 +167,19 @@ $ gvim                      # 启动gvim(下面都是vim命令)
  <p>@Ctrl+]@ :进入这个函数</p>
  <p>@Ctrl+T@ :返回搜索前的位置</p>
 
-    <h4>生成工程的cscope.files</h4>
-<pre>
-:cd /path/to/project                                                # 切换当前vim工作目录为工程目录
-:!find . -name '*.h' -o -name '*.c' -o -name '*.cpp' > cscope.files # 搜索当前目录下所有.h、.c、.cpp文件并生成cscope.files文件列表
-:!cscope -b                                                         # 根据cscope.files生成cscope.out数据库文件
-:cs add cscope.out .                                                # 连接cscope.out数据库
+    <h4>生成工程的cscope.files并生成cscope.out</h4>
+<pre class="prettyprint">
+# 切换当前vim工作目录为工程目录
+$ cd /path/to/project
+
+# 搜索当前目录下所有.h、.c、.cpp文件并生成cscope.files文件列表
+$ find . -name '*.h' -o -name '*.c' -o -name '*.cpp' > cscope.files
+
+$ cscope -b
+# 根据cscope.files生成cscope.out数据库文件
+
+$ vim # 在当前工程里启动vim，然后执行下面的命令连接cscope.out数据库，在前面加上的路径是(.)
+    :cs add cscope.out .
 </pre>
 </section>
 
@@ -210,9 +218,9 @@ option: 参数，省略时显替换第一个匹配的词
 
     <h4><small>3.3</small> tab替换成空格 <small>http://vim.wikia.com/wiki/Converting_tabs_to_spaces</small></h4>
 <div class="lgf-command">
-:set tabstop=4
-:set shiftwidth=4
-:set expandtab
+:set tabstop=4          ==
+:set shiftwidth=4       ||=> 添加到.vimrc配置文件中，则可直接执行retab
+:set expandtab          ==
 :retab
 </div>
 <pre class="lgf-command-description">
@@ -233,4 +241,11 @@ unix        表示是unix下的文件格式
 dos         windows下的文件格式
 mac         苹果下的文件格式
 </div>
+</section>
+
+<section>
+    <ul class="history">更新历史
+        <li>2013-03-25: 更新cscope插件部分</li>
+        <li>2012-12-06: ...</li>
+    </ul>
 </section>
